# rug-atp

./: .gitignore  Cargo.toml  Readme.md
analysis/: make_plots.py  statistics.py
configs/: baseline.json  high_greed.json  low_greed.json
plots/: make_plots.py
src/: agent.rs  building.rs  companies.rs  config.rs  entity.rs  generation.rs  grid.rs  main.rs  market.rs  resources.rs  statistics.rs  tile.rs  ui.rs  world.rs
src/entity/: agent.rs  building.rs  mod.rs  resources.rs
