[package]
name = "atp"
version = "0.1.0"
authors = ["Robin Kock <git@robin-kock.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui-framework = { path = "../gui-framework" }

glium = "0.27.0"
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"