[package]
name = "atp"
version = "0.1.0"
authors = ["Robin Kock <git@robin-kock.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dear-gui = { git = "https://github.com/klotzambein/dear-gui", rev = "b49df12e3272de043e067856c39b93d3cd7555d3" }

glium = "0.27.0"
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"
euclid = "0.22.2"
rand = "0.8.3"
noise = "0.7.0"
lazy_static = "1.4.0"
rand_distr = "0.4.0"
